2003-10-25  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/Queries.java (updateScoreTotals): need different update
	to include Judge column (830276)

2003-10-24  Jon Schewe  <jpschewe@mtu.net>

	* web/admin/commitTeam.jsp: Report an error on attempting to enter
	a duplicate team number.

	* src/fll/Queries.java (updateScoreTotals): Only check for Bye
	column on performance scores (bug from Chuck, didn't make it to SF).
	(updateScoreTotals): Fixed another bug from Chuck where all
	subjective scores were 0.

2003-10-22  Jon Schewe  <jpschewe@mtu.net>
	
	* labeled fll_2003_test_20031022 for testing

	* web/scoreEntry/scoreEntry.jsp: Made background yellow instead of
	grey on edit.  Also changed changed submit prompt for score edit
	(827928).

	* src/resources/challenge-region-2003.xml: Consistency in
	capitalization (827924).

	* web/WEB-INF/web-default.xml: Changed instances of 2002 to be
	2003 (827935).

	* src/fll/web/admin/Tournaments.java (generatePage): Make sure
	that when rows are added keep the key field as new for rows not
	committed to the database (827926).

2003-10-22  Jon Schewe  <jpschewe@mtu.net>

	* docs/index.html: Added information for database permissions for
	Linux (824072).

2003-10-21  Jon Schewe  <jpschewe@mtu.net>

	* docs/README.developer: Removed tournamentTeams application
	attribute to avoid caching problems (827929).

	* src/fll/Queries.java (computeTotalScore): Fixed so that Bye runs
	are ignored when computing total score (827932).

	* build.xml: Make subjective.sh and subjective.bat use
	application.classpath with pathconvert rather than hardcoding it
	to avoid mistakes (824074).

2003-10-15  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/admin/UploadTeams.java (parseFile): Handle empty
	columns as nulls.

2003-10-07  Jon Schewe  <jpschewe@mtu.net>
	
	* labeled fll_2003_test_20031007
	
2003-10-04  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/Queries.java (getColorForDivisionIndex): Support
	coloring more than just 2 divisions (766208).
